--- a/TojoMobile/projects/cell/TJAdScrollCell.xib
+++ b/TojoMobile/projects/cell/TJAdScrollCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJAdScrollCell" rowHeight="270" id="KGk-i7-Jjw" customClass="TJAdScrollCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="270"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TJAdScrollCell" rowHeight="210" id="KGk-i7-Jjw" customClass="TJAdScrollCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5SH-xN-ge5" customClass="MMScrollPresenter">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="269.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                     </scrollView>
                 </subviews>
                 <constraints>
@@ -28,7 +28,7 @@
             <connections>
                 <outlet property="mmScrollPresenter" destination="5SH-xN-ge5" id="UdN-cZ-XXE"/>
             </connections>
-            <point key="canvasLocation" x="230" y="307.5"/>
+            <point key="canvasLocation" x="230" y="292"/>
         </tableViewCell>
     </objects>
 </document>
