--- a/TojoMobile/projects/TJCommentListViewController.xib
+++ b/TojoMobile/projects/TJCommentListViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
@@ -23,7 +24,9 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="gK0-Jn-WBb" secondAttribute="trailing" id="6YL-py-HIB"/>
-                <constraint firstItem="gK0-Jn-WBb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="BAd-FI-5ab"/>
+                <constraint firstItem="gK0-Jn-WBb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="BAd-FI-5ab">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
                 <constraint firstItem="gK0-Jn-WBb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EAk-WN-Q6r"/>
                 <constraint firstAttribute="bottom" secondItem="gK0-Jn-WBb" secondAttribute="bottom" id="wOs-Wr-coS"/>
             </constraints>
