--- a/TojoMobile/projects/TJTeamListViewController.xib
+++ b/TojoMobile/projects/TJTeamListViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -192,7 +193,9 @@
                 <constraint firstAttribute="trailing" secondItem="rYF-gt-rw1" secondAttribute="trailing" id="fDn-Ps-9dS"/>
                 <constraint firstAttribute="bottom" secondItem="vki-bD-0ga" secondAttribute="bottom" constant="49" id="lT5-Zq-wgc"/>
                 <constraint firstAttribute="bottom" secondItem="rYF-gt-rw1" secondAttribute="bottom" id="yKW-Zi-b6n"/>
-                <constraint firstItem="vki-bD-0ga" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="zUx-dT-sUH"/>
+                <constraint firstItem="vki-bD-0ga" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="zUx-dT-sUH">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
             </constraints>
             <variation key="default">
                 <mask key="subviews">
