--- a/TojoMobile/projects/TJCommentViewController.xib
+++ b/TojoMobile/projects/TJCommentViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
@@ -47,11 +48,13 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="cA7-um-8YH" secondAttribute="trailing" id="Ote-G2-KIw"/>
-                <constraint firstItem="rci-o5-Q4j" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="RsJ-kU-yga"/>
+                <constraint firstItem="rci-o5-Q4j" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="RsJ-kU-yga">
+                    <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                </constraint>
                 <constraint firstItem="cA7-um-8YH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="SqG-RT-HNn"/>
                 <constraint firstItem="cA7-um-8YH" firstAttribute="top" secondItem="rci-o5-Q4j" secondAttribute="bottom" id="Xxu-qM-VdK"/>
                 <constraint firstItem="cA7-um-8YH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="272" id="YYs-V4-lJw">
-                    <variation key="heightClass=regular-widthClass=compact" constant="264"/>
+                    <variation key="heightClass=regular-widthClass=compact" constant="208"/>
                 </constraint>
                 <constraint firstItem="cA7-um-8YH" firstAttribute="top" secondItem="rci-o5-Q4j" secondAttribute="bottom" id="kaz-OG-OEO">
                     <variation key="heightClass=regular-widthClass=compact" constant="8"/>
