--- a/TojoMobile/projects/cell/TJTeamListCell.xib
+++ b/TojoMobile/projects/cell/TJTeamListCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
@@ -37,16 +38,7 @@
                         <color key="textColor" red="0.44313725490196076" green="0.44313725490196076" blue="0.44313725490196076" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                            <rect key="frame" x="128" y="29" width="51" height="21"/>
-                        </variation>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="学校" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dG-im-kOC">
-                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.44313725490196076" green="0.44313725490196076" blue="0.44313725490196076" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                        <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                            <rect key="frame" x="174" y="29" width="51" height="21"/>
+                            <rect key="frame" x="126" y="29" width="51" height="21"/>
                         </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="人数" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPv-PM-UPP">
@@ -73,16 +65,25 @@
                             <rect key="frame" x="16" y="14" width="50" height="51"/>
                         </variation>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="学校" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dG-im-kOC">
+                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.44313725490196076" green="0.44313725490196076" blue="0.44313725490196076" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                            <rect key="frame" x="182" y="29" width="130" height="21"/>
+                        </variation>
+                    </label>
                 </subviews>
                 <variation key="default">
                     <mask key="subviews">
                         <exclude reference="KJm-EL-wgP"/>
                         <exclude reference="hyG-Zl-bT3"/>
                         <exclude reference="sv9-ex-VN9"/>
-                        <exclude reference="2dG-im-kOC"/>
                         <exclude reference="hPv-PM-UPP"/>
                         <exclude reference="hh9-9K-6Zt"/>
                         <exclude reference="pDk-l4-nnB"/>
+                        <exclude reference="2dG-im-kOC"/>
                     </mask>
                 </variation>
                 <variation key="heightClass=regular-widthClass=compact">
@@ -90,10 +91,10 @@
                         <include reference="KJm-EL-wgP"/>
                         <include reference="hyG-Zl-bT3"/>
                         <include reference="sv9-ex-VN9"/>
-                        <include reference="2dG-im-kOC"/>
                         <include reference="hPv-PM-UPP"/>
                         <include reference="hh9-9K-6Zt"/>
                         <include reference="pDk-l4-nnB"/>
+                        <include reference="2dG-im-kOC"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
